# Voxel-Carving

./: CMakeLists.txt  Teapot.xyz  camera.cpp  camera.hpp  main.cpp  voxel.hpp  voxel_grid.cpp  voxel_grid.hpp
